Fixed all header style issues in CSS. Aligned Left Header perfectly to Google homepage.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,9 +7,29 @@
     flex-direction: column;
     flex-wrap: nowrap;
 }
-.header
+a, a:link, a:visited, a:focus, a:active a:not(.footer)
+    {
+        text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }  
+.leftheader
     {
         color: black;
+        float:left;
+        margin-top: 21px;
+        margin-left: 24px;
+        margin-right: -8px;
+        padding:2px;
+
+    }
+.rightheader
+    {
+        color: black;
+        float: right;
+        margin-top: 22px;
+        margin-right: 10px;
     }
 .footerleft
     {
@@ -18,12 +38,7 @@
 a:hover 
     {
             text-decoration: underline;
-    }
-header 
-    {
-            margin-top: 22px;
-    }
-    
+    }   
 body, input, button 
     {
         font-size: 14px;
@@ -49,7 +64,7 @@ body, input, button
         height:40px;
         border-radius: 50px;
     }
-    #bar:focus{
+#bar:focus{
        outline: none;
     }
 #buttons 
